refactor: upgrade to Spring Boot 4, declarative clients, virtual threads and edge-case integration tests